@@ -1,3 +1,4 @@
+2441 [OneClick] fixed PCM audio track handling in mkv files (regression of 2378)
 2440 [XviD] hide FourCC box as it will not be used
 2439 [FFMS Indexer] automatically switch to LoadCPlugin if required
                     add fpsnum and fpsden if required
